--- a/style.css
+++ b/style.css
@@ -100,16 +100,24 @@ body, html {
     width: 20%;
 }
 
+.w_auto{
+    width: auto;
+}
+
 .h_100{
     height: 100%;
 }
 
-.h_5{
-    height: 5rem;
-}
-
 .h_2{
     height: 2rem;
+}
+
+.h_3{
+    height: 3rem;
+}
+
+.h_5{
+    height: 5rem;
 }
 
 .h_auto{
@@ -120,6 +128,9 @@ body, html {
     min-height: 100%;
 }
 
+.vertical_align_top{
+    vertical-align: top;
+}
 
 /* COLOR OPACITY */
 
@@ -222,6 +233,10 @@ color :#bab2b5;
     margin-right: 7rem;
 }
 
+.m_l_1{
+    margin-left: 1rem;
+}
+
 .m_l_2{
     margin-left: 2rem;
 }
@@ -290,6 +305,10 @@ color :#bab2b5;
     padding: 1rem 2rem;
 }
 
+.p_l_1{
+    padding-left: 1rem;
+}
+
 .p_b_1{
     padding-bottom: 1rem;
 }
@@ -353,6 +372,9 @@ color :#bab2b5;
     border-radius: 3px;
 }
 
+.line_h_1{
+    line-height: 1;
+}
 
 /* Position */
 
@@ -406,6 +428,10 @@ color :#bab2b5;
 
 
 /* Custom */
+
+.bg_cover{
+    background-size: cover;
+}
 
 .close_button {
     width: 50px;
