image url redefine

--- a/style.css
+++ b/style.css
@@ -531,7 +531,7 @@ tbody tr:nth-of-type(even){
     padding-bottom: 45%; 
     background-size: cover;
     background-position: center;
-    background-image: url("./images_ref/1666340761_0033.jpg");
+    background-image: url("./images_ref/carousel5.jpeg");
 }
 
 .button{
